# JobSense

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  resume.tex  turbo.json
apps/api/: .env.example  Dockerfile  Procfile  alembic.ini  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/agents/: __init__.py  base.py  llm.py  prompts.py  schemas.py
apps/api/app/agents/workflows/: email_classification.py  job_discovery.py  job_matching.py  resume_tailoring.py
apps/api/app/api/: router.py
apps/api/app/api/v1/: dependencies.py  router.py
apps/api/app/core/: config.py  database.py  logging.py  redis.py  security.py  storage.py  storage_utils.py
apps/api/app/integrations/apify/: __init__.py  actors.py  client.py  normalizer.py
apps/api/app/integrations/gmail/: client.py  filters.py  parser.py
apps/api/app/integrations/google_calendar/: client.py  events.py
apps/api/app/models/: __init__.py  agent.py  application.py  base.py  calendar.py  document.py  email.py  job.py  profile.py  resume.py  user.py
apps/api/app/schemas/: __init__.py  agent.py  analytics.py  application.py  auth.py  calendar.py  email.py  job.py  profile.py  resume.py  user.py
apps/api/app/services/: __init__.py  analytics_service.py  application_service.py  auth_service.py  job_service.py  profile_service.py  resume_service.py
apps/api/app/tasks/: __init__.py  ai_tasks.py  calendar_tasks.py  celery_app.py  email_tasks.py  ingestion.py  matching.py
apps/api/scripts/: seed.py
apps/api/tests/: __init__.py  conftest.py  test_applications.py  test_auth.py  test_jobs.py
apps/web/: .eslintrc.json  (+6 more)
(+89 files in other folders)
