[tool.poetry]
name = "applyflow-api"
version = "0.1.0"
description = "ApplyFlow API — Agentic AI Job Search Copilot"
authors = ["ApplyFlow Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
redis = {extras = ["hiredis"], version = "^5.0.3"}
celery = {extras = ["redis"], version = "^5.3.6"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
openai = "^1.30.0"
anthropic = "^0.26.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.7"
langchain-anthropic = "^0.1.11"
langgraph = "^0.1.1"
pgvector = "^0.2.5"
numpy = "^1.26.4"
boto3 = "^1.34.0"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.128.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.2.0"}
structlog = "^24.1.0"
tiktoken = "^0.7.0"
pypdf = "^4.2.0"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
ruff = "^0.4.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
